# magpie

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  FRONTEND_BUILD_SUMMARY.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
backend/: .env.example  Dockerfile  FILES_MANIFEST.txt  README.md  USAGE.md  import_existing.py  pyproject.toml  rebuild_fts.py  requirements.txt  run.sh  verify_structure.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: category.py  compilation.py  loop_marker.py  tag.py  video.py
backend/app/routers/: analytics.py  categories.py  compilations.py  downloads.py  loop_markers.py  settings.py  tags.py  videos.py  webhook.py
backend/app/services/: categorizer.py  downloader.py  notifier.py  renderer.py  search.py  thumbnail.py
backend/app/tasks/: download_task.py
backend/app/utils/: file_utils.py  url_parser.py
backend/tests/: conftest.py  test_api_categories.py  test_api_compilations.py  test_api_loop_markers.py  test_api_tags.py  test_api_videos.py  test_categorizer.py  test_config.py  test_database.py  test_file_utils.py  test_models.py  test_notifier.py  test_search.py  test_thumbnail.py  test_url_parser.py
bots/: discord_bot.py  requirements.txt  telegram_bot.py
deploy/: docker-compose.nas.yml  docker-compose.yml
docs/: API_USAGE.md  ARCHITECTURE.md  COMPILATION_DESIGN.md  COMPLETION_REPORT.md  DESIGN.md  DEVELOPER_GUIDE.md  FRONTEND_QUICKSTART.md  NAS_MIGRATION.md  PLAN.md
e2e/: screenshots.spec.ts
frontend/: .env.example  README.md  index.html  (+4 more)
(+33 files in other folders)
