[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magpie"
version = "0.1.0"
description = "Self-hosted video collector with categorization and search"
requires-python = ">=3.12"
authors = [
    {name = "Video Downloader Team"}
]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "yt-dlp>=2024.01.01",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
